# PyKortex

./: .gitignore  README.md  package-lock.json  package.json
apps/desktop/: package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo
apps/desktop/scripts/: smoke-engine.mjs
apps/desktop/src/main/: engine.ts  index.ts
apps/desktop/src/preload/: index.d.ts  index.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: App.tsx  main.tsx  styles.css
apps/desktop/src/renderer/src/components/: CommandPalette.tsx  ConsoleView.tsx  DataFrameView.tsx  DebugPanel.tsx  DiffView.tsx  FastApiView.tsx  FileTree.tsx  GitPanel.tsx  OutputView.tsx  PanelsView.tsx  SearchPanel.tsx  SettingsModal.tsx  Splitter.tsx  SqlAlchemyView.tsx  StatusBar.tsx  TerminalPanel.tsx  VariableExplorer.tsx
apps/desktop/src/renderer/src/editor/: Editor.tsx  cells.ts  monacoSetup.ts
apps/desktop/src/renderer/src/engine/: collections.ts  erdLayout.ts  fsClient.ts  gitClient.ts  i18n.ts  paneLayout.ts  persistence.ts  projectSettings.ts  protocol.ts  pythonClient.ts  recents.ts  settings.ts  tasks.ts  themes.ts  useDebug.ts  useEngine.ts
services/engine/: pyproject.toml
services/engine/src/pykortex_engine/: __init__.py  __main__.py  analysis.py  debugger.py  git.py  protocol.py  pythons.py  terminal.py
services/engine/src/pykortex_engine/api/: app.py  files_router.py  git_router.py  python_router.py
services/engine/src/pykortex_engine/files/: __init__.py  service.py
services/engine/src/pykortex_engine/kernels/: __init__.py  manager.py
services/engine/tests/: test_fs.py  test_kernel_smoke.py  ws_client_check.py
services/kernel-runtime/: pyproject.toml
services/kernel-runtime/src/pykortex/: __init__.py  api.py  commands.py  dataframe.py  fastapi_view.py  introspect.py  mime.py  paging.py  registry.py  runtime.py  sqlalchemy_view.py  view.py
