[project]
name = "pykortex-engine"
version = "0.0.0"
description = "PyKortex backend - FastAPI + Jupyter kernel orchestration"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jupyter-client>=8.6",
    "ipykernel>=6.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
