[project]
name = "pykortex"
version = "0.0.0"
description = "PyKortex in-kernel runtime API: viewers, commands e display rico"
requires-python = ">=3.11"
# pandas + matplotlib são as integrações de dados iniciais; ipython vem com o ipykernel.
dependencies = ["pandas>=2.0", "matplotlib>=3.7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
